# Examples_ESP32-WROOM-32D

./: CMakeLists.txt  Examples_ESP32-WROOM-32D.code-workspace  blink.code-workspace  sdkconfig  sdkconfig.old
Components/: Components.c  Components_Config.h  Components_Selector.h
Components/ADC/: ADC-Component.c  ADC-Component.h
Components/ADC/Adapters/: ADC-Adapter.c  ADC-Adapter.h
Components/Configurations/: xSystem-Config.h  xTypes-Config.h
Components/Interfaces/: xSystem-Interface.c
Components/MQTT/: MQTT-Component.c  MQTT-Component.h  MQTT-ComponentConfig.h
Components/MQTT/Adapters/: MQTT-Client-Adapter.c  MQTT-Client-Adapter.h  MQTT-Port-Adapter.c  MQTT-Port-Adapter.h
Components/SerialPort/: UsartPort-Component.c  UsartPort-ComponentConfig.h
Components/SerialPort/Adapter/: UsartPort-Adapter.c  UsartPort-Adapter.h
Components/TCPServer/: TCPServer_WIZspiComponent.c  TCPServer_WIZspiComponent.h  TCPServer_WIZspiComponentConfig.h
Components/TCPServer/LWIP/: LWIP-NetTcpServer-Component.c  LWIP-NetTcpServer-Component.h  LWIP-NetTcpServer-ComponentConfig.h  TCPServer_LWIPComponent.c  TCPServer_LWIPComponentConfig.h
Components/TCPServer/LWIP/Adapters/: LWIP-Net-Adapter.c  LWIP-Net-Adapter.h  LWIP-NetPort-Adapter.c  LWIP-NetPort-Adapter.h
Components/WiFi/: WiFi-Component.c  WiFi-Component.h  WiFi-ComponentConfig.h
Components/WiFi/Adapters/: WiFi-Adapter.c  WiFi-Adapter.h
Components/sfc_spi/: sfc_spi_component.c  sfc_spi_component.h
Components/sfc_spi/adapters/: sfc_spi_adapter.c  sfc_spi_adapter.h  sfc_spi_config.h  sfc_spi_core.c  sfc_spi_core.h  sfc_spi_numbers.h
main/: CMakeLists.txt  Components_Config.h  blink_example_main.c  main.c
